// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Images ImageWithCaption smoke-test 1`] = `
<figure class="nhsuk-image">
  <img class="nhsuk-image__img"
       src="https://assets.nhs.uk/prod/images/S_1017_allergic-conjunctivitis_M15.2e16d0ba.fill-320x213.jpg"
       alt="Picture of allergic conjunctivitis"
       sizes="(min-width: 1020px) 320px, (min-width: 768px) 50vw, 100vw"
       srcset="https://assets.nhs.uk/prod/images/S_1017_allergic-conjunctivitis_M15.2e16d0ba.fill-640x427.jpg 640w, https://assets.nhs.uk/prod/images/S_1017_allergic-conjunctivitis_M15.2e16d0ba.fill-767x511.jpg 767w"
  >
  <figcaption class="nhsuk-image__caption">
    Caption for image
  </figcaption>
</figure>
`;

exports[`Components/Images ImageWithoutCaption smoke-test 1`] = `
<figure class="nhsuk-image">
  <img class="nhsuk-image__img"
       src="https://assets.nhs.uk/prod/images/S_1017_allergic-conjunctivitis_M15.2e16d0ba.fill-320x213.jpg"
       alt="Picture of allergic conjunctivitis"
       sizes="(min-width: 1020px) 320px, (min-width: 768px) 50vw, 100vw"
       srcset="https://assets.nhs.uk/prod/images/S_1017_allergic-conjunctivitis_M15.2e16d0ba.fill-640x427.jpg 640w, https://assets.nhs.uk/prod/images/S_1017_allergic-conjunctivitis_M15.2e16d0ba.fill-767x511.jpg 767w"
  >
</figure>
`;
